# OpenCV_Experiments

./: .gitignore  CMakeLists.txt
virtualCamera/: CMakeLists.txt  main.cpp
